# otonoco-fun

./: DOCKER_SETUP.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: documents.py  search.py
backend/app/services/: __init__.py  chunking_service.py  document_service.py  gemini_service.py  search_service.py  sec_service.py  weaviate_service.py
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: DocumentCard.jsx  DocumentList.jsx  FilterBar.jsx  LoadingSpinner.jsx  Pagination.jsx  SearchBar.jsx  SearchPanel.jsx
frontend/src/hooks/: useDocuments.js
frontend/src/services/: api.js
